--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Integración Cryptomus</title>
+    <meta name="cryptomus" content="fdf177c1" />
 </head>
 <body>
-    <h1>Prueba</h1>
+    <h1>Bienvenido</h1>
+    <p>Esta es una página simple para la integración con Cryptomus.</p>
 </body>
 </html>
+
